<resources>
    <string name="app_name">My Application</string>
    <string name="welcome">Welcome</string>
    <string name="firstname">Firstname</string>
    <string name="welcome_to_the_wild_code_school">Welcome to the Wild Code School</string>
    <string name="yes_i_want_to_be_a_wilder">Yes , I want to be a Wilder !</string>
    <string name="lastname">LastName</string>
    <string name="accept">Accept</string>
</resources>
